# mononom-rust

./: .commitlintrc.json  .editorconfig  Cargo.toml  README.md  nx.json  package-lock.json  package.json  workspace.json
apps/_audio/synthesis-wavetable/: Cargo.toml  README.md  project.json
apps/_audio/synthesis-wavetable/src/: main.rs
apps/bevy/: README.md
apps/bevy/greeta/: Cargo.toml  README.md  project.json
apps/bevy/greeta/src/: .main.rs.rustfmt  components.rs  main.rs  opponent.rs  player.rs
apps/bevy/invaders/: CHANGELOG.md  Cargo.toml  project.json
apps/bevy/invaders/src/: components.rs  main.rs  player.rs  project.json
apps/bevy/render-2d/: Cargo.toml  project.json
apps/bevy/render-2d/src/: components.rs  main.rs  mesh2d.rs  move_sprite.rs  rectangle.rs  text2d.rs
apps/guessing-game/: Cargo.toml  README.md  project.json
apps/guessing-game/src/: archive.main_2.rs  main.rs
apps/hello-cargo/: project.json
apps/hello-world/: Cargo.toml  project.json
apps/hello-world/src/: main  main.rs
apps/leetcode/easy/: .Cargo.toml.swp  Cargo.toml  project.json
apps/nlp/tokenizer/: Cargo.toml  project.json
apps/rust-app/: Cargo.toml  project.json
apps/rust-app/src/: main
apps/rust/basics/: project.json
apps/rust/ownership-borrowing/: project.json
libs/benchmark-tests/: Cargo.toml  README.md  project.json
libs/benchmark-tests/benches/: .sorting_benchmark.rs.swp  sorting_benchmark.rs
libs/benchmark-tests/src/: lib.rs
libs/rust-lib/: project.json
libs/rust-lib/src/: lib.rs
libs/tdd/adder/: Cargo.toml  project.json
(+30 files in other folders)
